Ajustes na documentação
